fix: 컴포넌트에 의해 가려지는 모달을 z-index로 최상단에 표시되도록 수정

--- a/src/components/Modal/ReviewDetailModal/ReviewDetailModal.module.css
+++ b/src/components/Modal/ReviewDetailModal/ReviewDetailModal.module.css
@@ -1,5 +1,6 @@
 .modalOverlay {
   position: absolute;
+  z-index: 1000;
   top: 0;
   left: 0;
   width: 100%;
@@ -18,8 +19,7 @@
   color: white;
   padding: 8px 16px;
   border-radius: 30px;
-  /* border-radius: 50%; */
-  font-size: 10 px;
+  font-size: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
